# deref-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
deref/: Cargo.toml
deref-derives/: Cargo.toml
deref-derives/src/: deref.rs  lib.rs
deref/benches/: basic_benchmark.rs
deref/examples/: hello.rs
deref/src/: lib.rs  macros.rs
