[package]
name = "deref"
version = "0.1.6"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
deref-derives = "0.1"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "basic_benchmark"
harness = false
